ReferralSystem/force-app/main/default/objects/Requirements__c/Requirements__c.object-meta.xml
<CustomObject>
    <label>Requirements</label>
    <nameField>
        <displayFormat>REQ-{00000}</displayFormat>
        <label>Requirement Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>