ReferralSystem/force-app/main/default/objects/Requirements__c/fields/Annual_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales__c</fullName>
    <label>Annual Sales</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>