ReferralSystem/force-app/main/default/objects/Requirements__c/fields/No_Of_Customers__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Customers__c</fullName>
    <label>No.Of Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>