ReferralSystem/force-app/main/default/objects/Requirements__c/fields/Req_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Req_Closed_Date__c</fullName>
    <label>Requirement Closed Date</label>
    <type>Date</type>
</CustomField>