ReferralSystem/force-app/main/default/objects/Requirements__c/fields/Req_Description__c.field-meta.xml
<CustomField>
    <fullName>Req_Description__c</fullName>
    <label>Requirement Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>