ReferralSystem/force-app/main/default/objects/Requirements__c/fields/Req_Name__c.field-meta.xml
<CustomField>
    <fullName>Req_Name__c</fullName>
    <label>Requirement Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>