ReferralSystem/force-app/main/default/objects/Requirements__c/fields/Req_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Req_Open_Date__c</fullName>
    <label>Requirement Open Date</label>
    <type>Date</type>
</CustomField>