ReferralSystem/force-app/main/default/objects/Requirements__c/listViews/My_Requirements.listView-meta.xml
<ListView>
    <fullName>My_Requirements</fullName>
    <columns>NAME</columns>
    <columns>LOB__c</columns>
    <columns>Req_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Annual_Sales__c</columns>
    <columns>Annual_Revenue__c</columns>
    <columns>Contact_Person_Name__c</columns>
    <columns>Contact_Person_Email__c</columns>
    <columns>Contact_Person_Phone__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Requirements</label>
</ListView>