ReferralSystem/force-app/main/default/objects/Requirements__c/listViews/Open_Requirements.listView-meta.xml
<ListView>
    <fullName>Open_Requirements</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>LOB__c</columns>
    <columns>Req_Name__c</columns>
    <columns>Req_Closed_Date__c</columns>
    <columns>Req_Open_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Open Requirements</label>
</ListView>